# nextjs-ai-marketing-platform

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/instructions/: nextjs-app-guidelines.instructions.md  python-service-guidelines.instructions.md  testing-requirements.instructions.md
asset-processing-service/: .env.example  README.md  pyproject.toml
nextjs/: .env.example  README.md  package-lock.json  package.json
nextjs/components/landing/: Footer.tsx
nextjs/migrations/: 0000_broad_emma_frost.sql
nextjs/migrations/meta/: 0000_snapshot.json  _journal.json
resources/: email-launch-prompt.md  linkedin-launch-prompt.md  skool-launch-prompt.md  x-launch-prompt copy.md  youtube-description-prompt.md
