[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Omar M Warraich <top-gear-technologies-llc.vercel.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.13.4"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
ffmpeg-python = "^0.2.0"
openai = "^1.47.0"
tiktoken = "^0.7.0"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
